--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -4,22 +4,22 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{{ url_for('static', filename='style/styles.css')}}" />
+    <link rel="stylesheet" href="{{ url_for('static', filename='style/styles.css') }}">
     <title>Real Food App</title>
 </head>
 <body>
-    <h1>Welcome to Real Food</h1>
+    <h1 class="welcome">Welcome to Real Food</h1>
 
     <form action="/" method="post">
         <!-- <label for="meal_name">Meal Name:</label><br>
         <input type="text" id="meal_name" name="meal_name"><br> -->
 
         <label for="ingredient">Select Ingredient you want to add:</label><br>
-        <select id="ingredient" name="ingredient">
+        <div class="ingredient-list">
             {% for food_item in food_items %}
-                <option value="{{ food_item }}">{{ food_item }}</option>
+                <label><input type="radio" name="ingredient" value="{{ food_item }}"> {{ food_item }}</label><br>
             {% endfor %}
-        </select><br>
+        </div><br>
 
         <label for="weight">Ingredient Weight (grams):</label><br>
         <input type="text" id="weight" name="weight"><br><br>
