--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -17,7 +17,11 @@
         <input type="text" id="age" name="age"><br>
 
         <label for="activity_level">Activity Level(Sedentary/Moderately Active/Active):</label><br>
-        <input type="text" id="activity_level" name="activity_level"><br><br>
+        <select name="activity_level">
+          <option value="sedentary">Sedentary</option>
+          <option value="moderately active">Moderately Active</option>
+          <option value="active">Active</option>
+        </select>
 
         <input type="hidden" id="total_calories" name="total_calories" value="{{ total_calories }}">
 
