--- a/app/static/style/styles.css
+++ b/app/static/style/styles.css
@@ -50,6 +50,10 @@ body {
   background: #F7D797;
 }
 
+.ingredients-added {
+  margin-top: 5rem;
+}
+
 .welcome {
   font-family: "Abril Fatface", serif;
   font-weight: 400;
@@ -76,4 +80,12 @@ body {
   .food-image {
     right: -75px;
   }
+}
+
+.buttons {
+  background-color: #F47E57;
+  padding: 1rem;
+  border-radius: 20px;
+  border-width: 0;
+  font-size: 1.2rem;
 }
