Added /50 to the score

--- a/app/templates/score.html
+++ b/app/templates/score.html
@@ -30,7 +30,7 @@
     {% if feedback %}
         <h2>Feedback:</h2>
         <p>{{ feedback }}</p>
-        <p>Total Score: {{ total_score }}</p>
+        <p>Total Score: {{ total_score }}/50</p>
     {% endif %}
 </body>
 </html>
